Github live pages overflow fix v7
Text-wrap: wrap; toegevoegd.

--- a/styles/style.css
+++ b/styles/style.css
@@ -530,4 +530,5 @@ footer {
   margin: 0.2em 0;
   max-width: 100%;
   box-sizing: border-box;
+  text-wrap: wrap;
 }
